--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.thymeleaf.cache=false
 
-security.basic.enabled=true
+security.basic.enabled=false
 server.port=8070
 spring.jmx.enabled=true
 
 endpoints.shutdown.enabled=true
-endpoints.shutdown.sensitive=true
+endpoints.shutdown.sensitive=false
 
-security.user.name=admin
-security.user.password=secret
-management.security.role=SUPERUSER
+#security.user.name=admin
+#security.user.password=secret
+#management.security.role=SUPERUSER
 
 project.artifactId=wwwsite
 project.name=Public WWW Site
