Disguising header X-Application-Context

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,5 @@ info.build.artifact=@project.artifactId@
 info.build.name=@project.name@
 info.build.description=@project.description@
 info.build.version=@project.version@
+
+spring.application.index=www-site
