--- a/pom.xml
+++ b/pom.xml
@@ -87,5 +87,10 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+        	<groupId>commons-codec</groupId>
+        	<artifactId>commons-codec</artifactId>
+        	<version>1.10</version>
+        </dependency>
     </dependencies>
 </project>
